--- a/WebApi/Views/Admin/EditVariant.cshtml
+++ b/WebApi/Views/Admin/EditVariant.cshtml
@@ -188,7 +188,7 @@
         }
     </select>
 
-    <label>Упражнения</label>
+    <label>Упражнения (оставьте пустым для случайного заполнения)</label>
     <div class="exercises-list">
         @foreach (var exercise in ViewBag.AllExercises as List<ExerciseDto> ?? new List<ExerciseDto>())
         {
