--- a/WebApi/Views/Shared/_AdminLayout.cshtml
+++ b/WebApi/Views/Shared/_AdminLayout.cshtml
@@ -89,6 +89,7 @@
         <a href="/Admin/Exercises">Задания</a>
         <a href="/Admin/Variants">Варианты</a>
         <a href="/Admin/ExercisesToModerate">Модерация</a>
+        <a href="/Admin/ExitFromAccount">Выйти</a>
     </div>
     <div class="main">
         <header>
