--- a/WebApi/Views/Student/GetExamToSolve.cshtml
+++ b/WebApi/Views/Student/GetExamToSolve.cshtml
@@ -58,7 +58,7 @@
                         <span class="text-muted">(Год: @ex.Year)</span>
                         @if (ex.AttachmentRequired)
                         {
-                            <span class="badge bg-warning text-dark ms-2">Решение обязательно</span>
+                            <span class="badge bg-warning text-dark ms-2">Вложение обязательно</span>
                         }
                     </div>
                     <div class="card-body">
